--- a/development/index.html
+++ b/development/index.html
@@ -22,7 +22,7 @@
                     <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="18" height="15"><path fill="#242A45" fill-rule="evenodd" d="M0 0h18v3H0V0zm0 6h18v3H0V6zm0 6h18v3H0v-3z"></path></svg>
                 </button>
             </div>
-            <nav id="header-nav" hidden="" class=" main__header__nav">
+            <nav hidden="" class=" main__header__nav">
                 <ul class=" main__header__nav__list">
                     <li class=" main__header__nav__list__item">
                         <a data-focusable="" href="#">Features</a>
@@ -73,13 +73,13 @@
                 <div class="tabs">
                     <ul role="tablist">
                         <li role="presentation">
-                            <button aria-selected="true" role="tab" id="simple-bookmarking">Simple Bookmaring</button>
+                            <button href="#bookmarking" aria-selected="true" role="tab" id="simple-bookmarking">Simple Bookmaring</button>
                         </li>
                         <li role="presentation">
-                            <button tabindex="-1" role="tab" id="speedy-searching">Speedy Searching</button>
+                            <button tabindex="-1" href="#searching" role="tab" id="speedy-searching">Speedy Searching</button>
                         </li>
                         <li role="presentation">
-                            <button tabindex="-1" role="tab" id="easy-sharing">Easy Sharing</button>
+                            <button tabindex="-1" href="#sharing" role="tab" id="easy-sharing">Easy Sharing</button>
                         </li>
                     </ul>
                     
